# rust-fundamentals-notes

./: Cargo.toml  README.md
src/: collections.rs  concurrency.rs  control_flow.rs  data_structures_and_traits.rs  data_types_and_variables.rs  error_handling.rs  functions_definitions.rs  generics.rs  geo.rs  language_operators.rs  main.rs  number_variables.rs  ownership_and_borrowing.rs  project.rs  strings_and_slices.rs
